--- a/doctor.html
+++ b/doctor.html
@@ -36,7 +36,7 @@
 
         <div class="section__container coisey__container">
             <div class="doctor__image">
-                <img src="Website Photos/Professor Headshots/Knox-Kazimierczuk_Francoise Final.jpg" alt="doctor">
+                <img src="Website Photos\Website Photos\Professor Headshots\Knox-Kazimierczuk_Francoise Final.jpg" alt="doctor">
             </div>
             <div class="coisey__content">
                 <h3>Francoise Alisha Knox Kazimierczuk</h3>
