--- a/team.html
+++ b/team.html
@@ -41,7 +41,7 @@
             <div class="team__grid">
                 <div class="team__card">
                     <div class="team__image">
-                        <img src="Website Photos/Lab Team Photos/Our Lab Team/Knox-Kazimierczuk_Francoise Final (1).jpg" alt="team" />
+                        <img src="Website Photos\Website Photos\Lab Team Photos\Our Lab Team\Knox-Kazimierczuk_Francoise Final (1).jpg" alt="team" />
                     </div>
                     <div class="team__card__content">
                         <h4>Francoise Knox-Kazimierczuk, Ph.D RDN, LD, CLC, FAND</h4>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="team__card">
                     <div class="team__image">
-                        <img src="Website Photos/Lab Team Photos/Our Lab Team/Ashley Headshot 2025 (1) (1).jpg" alt="team" />
+                        <img src="Website Photos\Website Photos\Lab Team Photos\Our Lab Team\Ashley Headshot 2025 (1) (1).jpg" alt="team" />
                     </div>
                     <div class="team__card__content">
                         <h4>Ashley Felts, MS. </h4>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="team__card">
                     <div class="team__image">
-                        <img src="Website Photos/Lab Team Photos/Our Lab Team/Dr. Angelica Hardee Headshot - Angelica Hardee (1).jpg" alt="team" />
+                        <img src="Website Photos\Website Photos\Lab Team Photos\Our Lab Team\Dr. Angelica Hardee Headshot - Angelica Hardee (1).jpg" alt="team" />
                     </div>
                     <div class="team__card__content">
                         <h4>Angelica Hardee, Ph.D </h4>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="team__card">
                     <div class="team__image">
-                        <img src="Website Photos/Lab Team Photos/Our Lab Team/Crystal Summers.png" alt="team" />
+                        <img src="Website Photos\Website Photos\Lab Team Photos\Our Lab Team\Crystal Summers.png" alt="team" />
                     </div>
                     <div class="team__card__content">
                         <h4>Crystal Summers</h4>
