--- a/team.html
+++ b/team.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="team__card">
                     <div class="team__image">
-                        <img src="Website Photos/Headshots/Headshots/EmilyDiefendorf-Headshot-110424.jpeg" alt="team" />
+                        <img src="Website Photos\Website Photos\Headshots\Headshots\EmilyDiefendorf-Headshot-110424.jpeg" alt="team" />
                     </div>
                     <div class="team__card__content">
                         <h4>Emily Diefendorf</h4>
@@ -146,7 +146,7 @@
             <div class="team__grid">
                 <div class="team__card">
                     <div class="team__image">
-                        <img src="Website Photos/Lab Team Photos/Our Lab Team/Charlie Harker.jpeg" alt="team" />
+                        <img src="Website Photos\Website Photos\Headshots\Headshots\Charlie Harker.jpeg" alt="team" />
                     </div>
                     <div class="team__card__content">
                         <h4>Charlie Harker</h4>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="team__card">
                     <div class="team__image">
-                        <img src="Website Photos/Lab Team Photos/Our Lab Team/Afolakemi Akinrefon.jpeg" alt="team" />
+                        <img src="Website Photos\Website Photos\Headshots\Headshots\Afolakemi Akinrefon.jpeg" alt="team" />
                     </div>
                     <div class="team__card__content">
                         <h4>Afolakemi Akinrefon</h4>
