--- a/team.html
+++ b/team.html
@@ -177,7 +177,7 @@
                 </div>
                 <div class="team__card">
                     <div class="team__image">
-                        <img src="Website Photos/Lab Team Photos/Our Lab Team/Mallory Wooldridge.jpeg" alt="team" />
+                        <img src="Website Photos\Website Photos\Headshots\Headshots\Mallory Wooldridge.jpeg" alt="team" />
                     </div>
                     <div class="team__card__content">
                         <h4>Mallory Wooldridge</h4>
