--- a/team.html
+++ b/team.html
@@ -193,7 +193,7 @@
                 </div>
                 <div class="team__card">
                     <div class="team__image">
-                        <img src="Website Photos/Lab Team Photos/Our Lab Team/Niyati Kanchan.jpeg" alt="team" />
+                        <img src="Website Photos\Website Photos\Headshots\Headshots\Niyati Kanchan.jpeg" alt="team" />
                     </div>
                     <div class="team__card__content">
                         <h4>Niyati Kanchan</h4>
