--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
             <br>
             <br>
             <div class="research__image">
-                <img src="Website Photos/Photos & Videos/Women’s Health Equity  Symposium  2024 Slide Deck.jpg" alt="research">
+                <img src="Website Photos\Website Photos\Photos & Videos\Women’s Health Equity  Symposium  2024 Slide Deck.jpg" alt="research">
             </div>
             <h3>Women’s Health Equity Symposium</h3>
             <p><strong>Include symposium logo</strong></p>
